Split partitioning from hana installation
Move partitioning and LVM setup to a seperate module, which makes it
easier to a) maintain this stuff and b) add additional steps between
those two.

Signed-off-by: Michael Moese <mmoese@suse.com>

--- a/schedule/kernel/sles4sap/installation/setup_hana_baremetal.yaml
+++ b/schedule/kernel/sles4sap/installation/setup_hana_baremetal.yaml
@@ -28,7 +28,8 @@ conditional_schedule:
   test_sles4sap:
     TEST_SLES4SAP:
       1:
-        - sles4sap/hana_install
+        - tests/kernel/hana_install.pm
+        - tests/kernel/partition_for_hana.pm
         - sles4sap/wmp_setup
         - sles4sap/wmp_basic_test
         #- reboot?
